--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
-<html>
+<!DOCTYPE html>
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>My LIFF v2</title>
+  <title>Line Connect ACCESS</title>
   <style>
     #pictureUrl { display: block; margin: 0 auto }
   </style>
@@ -32,5 +32,6 @@
       }
     }, err => console.error(err.code, error.message));
   </script>
+  <iframe src="https://script.google.com/macros/s/AKfycbxQO5f07BY-C3OrHHdea9GS_A1P1L4KVs2DKQewmGxo_Mr3J0_w3R8UKqM_7poJTdWC/exec"></iframe>
 </body>
 </html>
