--- a/index.html
+++ b/index.html
@@ -32,6 +32,6 @@
       }
     }, err => console.error(err.code, error.message));
   </script>
-  <iframe src="https://script.google.com/macros/s/AKfycbxQO5f07BY-C3OrHHdea9GS_A1P1L4KVs2DKQewmGxo_Mr3J0_w3R8UKqM_7poJTdWC/exec" width="100%" height="40%" allowfullscreen></iframe>
+  <iframe src="https://script.google.com/macros/s/AKfycbxQO5f07BY-C3OrHHdea9GS_A1P1L4KVs2DKQewmGxo_Mr3J0_w3R8UKqM_7poJTdWC/exec" width="500" height="500" allowfullscreen></iframe>
 </body>
 </html>
