--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </style>
 </head>
 <body>
-  <img id="pictureUrl" width="25%">
+  <img id="pictureUrl" height="75" width="75">
   <p id="userId"></p>
   <p id="displayName"></p>
   <p id="statusMessage"></p>
